-- The name of the package.
Name:                cluster-barcodes

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

Synopsis:            Simple tool for clustering genetic barcodes.

-- Description:         

Homepage:            http://github.com/ndaniels/cluster-barcodes

License:             MIT

-- The file containing the license text.
--License-file:        LICENSE

-- The package author(s).
Author:              Noah M. Daniels
Maintainer:          ndaniels@csail.mit.edu
-- A copyright notice.
-- Copyright:           

Category:            Science
Build-type:          Simple

Cabal-version:       >=1.6

Extra-source-files: *.hs

Executable cluster-barcodes
  Main-is: Main.hs
  ghc-options:         -O2
  
  -- Packages needed in order to build this package.
  Build-depends: base >= 4.0,
                 cmdargs >=0.8,
                 split >= 0.2,
                 hashmap >= 1.3.0.1
  
